--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=JavaFXApplication11
+application.title=BangkokCondoFinder
 application.vendor=Ivora
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,7 +29,7 @@ debug.test.modulepath=\
     ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JavaFXApplication11.jar
+dist.jar=${dist.dir}/BangkokCondoFinder.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -107,7 +107,7 @@ javafx.signing.blob=false
 javafx.signing.enabled=false
 javafx.signing.type=notsigned
 jlink.launcher=false
-jlink.launcher.name=JavaFXApplication11
+jlink.launcher.name=BangkokCondoFinder
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
