--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.jar=${dist.dir}/BangkokCondoFinder.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-9.0.0.jar=C:\\Users\\Ivora\\Desktop\\controlsfx-9.0.0.jar
 file.reference.jfoenix-9.0.0.jar=src\\jfoenix-9.0.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -41,7 +42,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
-    ${file.reference.jfoenix-9.0.0.jar}
+    ${file.reference.jfoenix-9.0.0.jar}:\
+    ${file.reference.controlsfx-9.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
