เหลือหน้า update

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,7 +46,7 @@ javac.classpath=\
     ${file.reference.controlsfx-9.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
