--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,8 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
     ${file.reference.jfoenix-9.0.0.jar}:\
-    ${file.reference.controlsfx-9.0.0.jar}
+    ${file.reference.controlsfx-9.0.0.jar}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -75,6 +76,10 @@ javadoc.version=false
 javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
+javafx.classpath.extension=\
+    ${java.home}/lib/javaws.jar:\
+    ${java.home}/lib/deploy.jar:\
+    ${java.home}/lib/plugin.jar
 javafx.deploy.adddesktopshortcut=false
 javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
