--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,8 +33,9 @@ dist.jar=${dist.dir}/BangkokCondoFinder.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.controlsfx-9.0.0.jar=C:\\Users\\Ivora\\Desktop\\controlsfx-9.0.0.jar
 file.reference.jfoenix-9.0.0.jar=src\\jfoenix-9.0.0.jar
+file.reference.jfoenix.jar=C:\\Users\\Ivora\\Desktop\\jfoenix.jar
+file.reference.mysql-connector-java-5.1.44-bin.jar=C:\\Users\\Ivora\\Desktop\\mysql-connector-java-5.1.44-bin.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -43,8 +44,8 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
     ${file.reference.jfoenix-9.0.0.jar}:\
-    ${file.reference.controlsfx-9.0.0.jar}:\
-    ${javafx.classpath.extension}
+    ${file.reference.jfoenix.jar}:\
+    ${file.reference.mysql-connector-java-5.1.44-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -76,10 +77,6 @@ javadoc.version=false
 javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
-javafx.classpath.extension=\
-    ${java.home}/lib/javaws.jar:\
-    ${java.home}/lib/deploy.jar:\
-    ${java.home}/lib/plugin.jar
 javafx.deploy.adddesktopshortcut=false
 javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
